# kiran-session-guard

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  dbusapihelper.cpp  dbusapihelper.h  greeterbackground.cpp  greeterbackground.h  greeterkeyboard.cpp  greeterkeyboard.h  greeterlineedit.cpp  greeterlineedit.h  greeterlineedit.ui  greeterloginwindow.cpp  greeterloginwindow.h  greeterloginwindow.ui  greetermenuitem.h  greeterscreenmanager.cpp  greeterscreenmanager.h  greetersetting.cpp  greetersetting.h  gsettingshelper.cpp  gsettingshelper.h  image.qrc  kiran-screensaver-dialog.pro  lightdm-kiran-greeter.pro  listwidgetwrapper.h  lockplug.cpp  lockplug.h  log.cpp  log.h  main.cpp  pamauthproxy.cpp  pamauthproxy.h  scalinghelper.cpp  screensaverdialog.cpp  screensaverdialog.h  screensaverdialog.ui  (+9 more)
kiran-greeter-settings/: CMakeLists.txt  kiran-greeter-setting.pro
kiran-greeter-settings/config/: com.kiran.kiran-greeter-settings.policy  kiran-greeter-settings.desktop
kiran-greeter-settings/resources/: resources.qrc
kiran-greeter-settings/src/: dbusapi.cpp  dbusapi.h  greeter-setting-window.cpp  greeter-setting-window.h  greeter-setting-window.ui  greetersetting.cpp  greetersetting.h  greetersetting.ui  hover-tips.cpp  hover-tips.h  lightdmprefs.cpp  lightdmprefs.h  logingreeterpreviewwidget.cpp  logingreeterpreviewwidget.h  main.cpp  tabitem.h  tabitem.ui
kiran-greeter-settings/translations/: kiran-greeter-settings.zh_CN.ts
kiran-screensaver-dialog/kiran-screensaver-checkpass/: CMakeLists.txt
lib/auth-proxy/: CMakeLists.txt  auth-base.cpp  auth-base.h  auth-controller-i.h  auth-controller.cpp  auth-controller.h  auth-define.h  auth-lightdm.cpp  auth-lightdm.h  auth-msg-queue-base.h  auth-msg-queue.cpp  auth-msg-queue.h  auth-pam.cpp  auth-pam.h  auth-proxy.cpp  auth-proxy.h
lib/common/: CMakeLists.txt  user-utils.cpp  user-utils.h  virtual-keyboard.cpp  virtual-keyboard.h
lib/common-widgets/: CMakeLists.txt  auth-type-drawer.cpp  auth-type-drawer.h  auth-type-switcher-define.h  auth-type-switcher.cpp  auth-type-switcher.h  face-auth-avatar.cpp  face-auth-avatar.h  finger-auth-avatar.cpp  finger-auth-avatar.h  greeterlineedit.cpp  greeterlineedit.h  prompt-edit.cpp  prompt-edit.h  shadow-label.cpp  shadow-label.h  user-avatar.cpp  user-avatar.h  useravatarwidget.cpp  virtual-keyboard.cpp  virtual-keyboard.h
lib/dbus/: CMakeLists.txt  com.kylinsec.Kiran.SystemDaemon.Accounts.xml  com.kylinsec.Kiran.SystemDaemon.Greeter.xml  dbus-common.h  org.freedesktop.Accounts.User.xml
lib/login-frame/: CMakeLists.txt  login-frame.cpp  login-frame.h  login-frame.ui
lib/scaling-helper/: CMakeLists.txt  scaling-helper.cpp  scaling-helper.h  scalinghelper.cpp  scalinghelper.h
lib/utils/: CMakeLists.txt  cursor-helper.cpp  cursor-helper.h  keyboard-monitor.cpp  keyboard-monitor.h  scaling-helper.cpp  scaling-helper.h  user-manager.cpp  user-manager.h  virtual-keyboard.cpp  virtual-keyboard.h
libexec/session-guard-checkpass/: CMakeLists.txt  main.cpp
lightdm-greeter/: CMakeLists.txt
lightdm-greeter/common/: dbusapi.cpp  dbusapi.h
lightdm-greeter/config/: greeter.ini.in
lightdm-greeter/kiran-cpanel-greeter/: CMakeLists.txt
lightdm-greeter/public/: accounts-tool.h  define.h  disabledeselectlistwidget.cpp  disabledeselectlistwidget.h  kiran-greeter-prefs.cpp  kiran-greeter-prefs.h
lightdm-greeter/resources/: resources.qrc
lightdm-greeter/src/: app-native-event-filter.cpp  app-native-event-filter.h  capslock-snoop.cpp  capslock-snoop.h  capslocksnoop.cpp  cursor-helper.cpp  cursor-helper.h  cursorhelper.cpp  filter-user-proxy-model.cpp  filter-user-proxy-model.h  greeter-background.cpp  greeter-background.h  greeter-login-window.cpp  greeter-login-window.h  greeter-menu-item.cpp  greeter-menu-item.h  greeter-screen-manager.cpp  greeter-screen-manager.h  greeterbackground.cpp  greeterloginwindow.cpp  greeterloginwindow.h  greeterloginwindow.ui  greetermenuitem.h  greeterscreenmanager.cpp  login-button.cpp  login-button.h  login-button.ui  loginbutton.cpp  main.cpp  styled-item-delegate.cpp  sync-lock-status.cpp  sync-lock-status.h  unix-signal-monitor.cpp  unix-signal-monitor.h  user-info.h  user-list-item.cpp  user-list-item.h  user-list-item.ui  user-list-widget.cpp  user-list-widget.h  (+1 more)
lightdm-greeter/translations/: lightdm-kiran-greeter.zh_CN.ts
screensaver-dialog/: CMakeLists.txt  README.md  config.h.in
screensaver-dialog/resources/: resources.qrc
screensaver-dialog/src/: gsettings-helper.cpp  gsettings-helper.h  gsettingshelper.cpp  ks-plugin.cpp  ks-plugin.h  main.cpp  plugin.cpp  plugin.h  prefs.cpp  prefs.h  screensaver-dialog.cpp  screensaver-dialog.h  screensaver-dialog.ui  screensaverdialog.cpp  screensaverdialog.h
screensaver-dialog/translations/: kiran-screensaver-dialog.zh_CN.ts
src/: CMakeLists.txt  auth-msg-queue.cpp  auth-msg-queue.h  capslocksnoop.cpp  capslocksnoop.h  cursorhelper.cpp  cursorhelper.h  face-auth-avatar.cpp  finger-auth-avatar.cpp  finger-auth-avatar.h  greeterbackground.cpp  greeterbackground.h  greeterkeyboard.cpp  greeterkeyboard.h  greeterlineedit.cpp  greeterlineedit.h  greeterlineedit.ui  greeterloginwindow.cpp  greeterloginwindow.h  greeterloginwindow.ui  greetermenuitem.cpp  greetermenuitem.h  greeterpromptmsgmanager.cpp  greeterpromptmsgmanager.h  greeterscreenmanager.cpp  greeterscreenmanager.h  greetersetting.cpp  greetersetting.h  gsettingshelper.cpp  gsettingshelper.h  loginbutton.cpp  loginbutton.h  main.cpp  pamauthproxy.cpp  pamauthproxy.h  scalinghelper.cpp  scalinghelper.h  screensaverdialog.cpp  screensaverdialog.h  screensaverdialog.ui  (+13 more)
src/auth/: auth-msg-queue.cpp  auth-pam.cpp  auth-proxy.h
src/dbus-api-wrapper/: dbusapihelper.cpp  dbusapihelper.h
src/lightdm-greeter/: CMakeLists.txt  app-native-event-filter.cpp  auth-lightdm.cpp  auth-lightdm.h  background.cpp  background.h  filter-user-proxy-model.cpp  filter-user-proxy-model.h  frame.cpp  frame.h  main.cpp  screen-manager.cpp  screen-manager.h  term-signal-handler.cpp  term-signal-handler.h
src/tool/: log.cpp  (+1 more)
(+283 files in other folders)
